<resources>
    <string name="app_name">MemberApp</string>

    <string name="title">Member Access</string>
    <string name="enter_number">Enter You Membership Number</string>
    <string name="submit">Submit</string>
    <string name="title_activity_json_api">JsonApiActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="jsonActivity">Repos</string>
    <string name="http_fragment">Http Service</string>
    <string name="title_activity_http">HttpActivity</string>
</resources>
