<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_activity.MainActivity">

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#011a5c"
            android:textSize="40dp" />


        <ImageView
            android:id="@+id/ivMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/member" />


        <EditText
            android:id="@+id/etMemberId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivMember"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_number"
            android:textAlignment="center"
            android:textColor="#011a5c"
            android:textSize="30dp" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMemberId"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#011a5c"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnJsonActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_marginTop="20dp"
            android:text="@string/jsonActivity"
            android:textAlignment="center"
            android:textColor="#011a5c"
            android:textSize="30dp" />

        <Button
            android:id="@+id/btnHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_marginTop="20dp"
            android:text="@string/http_fragment"
            android:textAlignment="center"
            android:textColor="#011a5c"
            android:textSize="30dp" />

    </LinearLayout>
</ScrollView>
